<resources>
    <string name="app_name">FirstApp</string>
    <string name="hello">Hello World</string>
    <string name="text">Hello </string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="btn_lable">Button</string>
    <string name="hint_txt">Input Keywords</string>
    <string name="lable_1">转化为华氏温度</string>
    <string name="lable_2">请输入摄氏度</string>
    <string name="lable_3">Result</string>
    <string name="label_add1">+1 point</string>
    <string name="label_add2">+2 point</string>
    <string name="label_add3">+3 point</string>
    <string name="btn_resert_label">Resert</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="rmb_hint">Input RMB</string>
    <string name="btn_opencfg_label">Config</string>
    <string name="btn_save_label">Save</string>
    <string name="menu_set_label">Setting</string>
    <string name="label_open_list">OpenList</string>
    <string name="btn_search_label">Search</string>
    <string name="Result"><a href="https://it.swufe.edu.cn/info/1093/6777.htm"></a></string>
</resources>
